[gd_scene load_steps=10 format=3 uid="uid://cicenimchkmv1"]

[ext_resource type="Script" path="res://teams/Player.gd" id="1_fecep"]
[ext_resource type="Texture2D" uid="uid://ntigctv0fom6" path="res://assets/textures/ball.png" id="2_q7h3g"]
[ext_resource type="Texture2D" uid="uid://cfdqp1hvoh4j" path="res://assets/textures/player_sprites/rat-1.png(3).png" id="2_txfvi"]
[ext_resource type="Script" path="res://ui/scripts/BoardSprite.gd" id="3_v1k74"]
[ext_resource type="Script" path="res://teams/stats.gd" id="4_r4dla"]
[ext_resource type="PackedScene" uid="uid://bnw5a3jcwwnh5" path="res://components/component_scenes/select_component.tscn" id="5_7y36t"]
[ext_resource type="Script" path="res://teams/skills.gd" id="5_ip3vd"]
[ext_resource type="PackedScene" uid="uid://dmj4qqjic80ht" path="res://components/component_scenes/player_ui_component.tscn" id="6_6w746"]
[ext_resource type="Script" path="res://teams/block_dice_viewer.gd" id="7_qkdat"]

[node name="line_rat" type="Node2D" node_paths=PackedStringArray("mySprite", "ball_texture", "ui_component", "blockDiceViewer")]
position = Vector2(1083, 210)
script = ExtResource("1_fecep")
mySprite = NodePath("BoardSprite")
myGridPosition = Vector2(6, 11)
isOpponent = true
ball_texture = NodePath("BallTexture")
ui_component = NodePath("Player_Ui_Component")
blockDiceViewer = NodePath("BlockDiceViewer")

[node name="BallTexture" type="TextureRect" parent="."]
visible = false
z_index = 2
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 28.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_q7h3g")
expand_mode = 2

[node name="BoardSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-0.5, -0.5)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_txfvi")
script = ExtResource("3_v1k74")

[node name="Stats" type="Node2D" parent="."]
script = ExtResource("4_r4dla")
MA = 9
STR = 2
AG = 2
PA = 4
AV = 8

[node name="Skills" type="Node2D" parent="."]
script = ExtResource("5_ip3vd")
_skill_map = {
"BLOCK": false,
"DODGE": true,
"FRENZY": false
}

[node name="Select_Component" parent="." node_paths=PackedStringArray("node_emit_on_select") instance=ExtResource("5_7y36t")]
scale = Vector2(1.4, 1.44)
node_emit_on_select = NodePath("..")

[node name="Player_Ui_Component" parent="." instance=ExtResource("6_6w746")]
z_index = 2
position = Vector2(21, -28)

[node name="BlockDiceViewer" type="Node2D" parent="."]
z_index = 5
position = Vector2(-1, 0)
script = ExtResource("7_qkdat")
