[gd_scene load_steps=12 format=3 uid="uid://cwav44svuxn5l"]

[ext_resource type="Script" path="res://teams/Player.gd" id="1_0lfiq"]
[ext_resource type="Texture2D" uid="uid://ntigctv0fom6" path="res://assets/textures/ball.png" id="2_edahv"]
[ext_resource type="Texture2D" uid="uid://bgupcleo51cf" path="res://assets/textures/player_sprites/line_rat.png" id="2_m3xs3"]
[ext_resource type="Script" path="res://ui/scripts/board_sprite.gd" id="3_rmjhq"]
[ext_resource type="Script" path="res://teams/stats.gd" id="4_u03hx"]
[ext_resource type="Script" path="res://teams/skills.gd" id="5_3dlth"]
[ext_resource type="PackedScene" uid="uid://bnw5a3jcwwnh5" path="res://components/component_scenes/select_component.tscn" id="5_6d4g4"]
[ext_resource type="PackedScene" uid="uid://dmj4qqjic80ht" path="res://components/component_scenes/player_ui_component.tscn" id="6_qnm0n"]
[ext_resource type="Script" path="res://teams/block_dice_viewer.gd" id="7_tnamy"]
[ext_resource type="PackedScene" uid="uid://blr437bq866w7" path="res://components/component_scenes/collider_component.tscn" id="10_ao2xe"]
[ext_resource type="PackedScene" uid="uid://ch2683b76yi3b" path="res://components/component_scenes/drag_and_drop_component.tscn" id="11_k3y3d"]

[node name="line_rat" type="Node2D" node_paths=PackedStringArray("mySprite", "ball_texture", "ui_component", "blockDiceViewer")]
position = Vector2(1083, 210)
script = ExtResource("1_0lfiq")
player_type_string = "line rat"
mySprite = NodePath("BoardSprite")
myGridPosition = Vector2(6, 11)
isOpponent = true
ball_texture = NodePath("BallTexture")
ui_component = NodePath("PlayerUiComponent")
blockDiceViewer = NodePath("BlockDiceViewer")

[node name="BallTexture" type="TextureRect" parent="."]
visible = false
z_index = 2
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 28.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_edahv")
expand_mode = 2

[node name="BoardSprite" type="Sprite2D" parent="."]
position = Vector2(-0.5, -0.5)
scale = Vector2(0.095, 0.095)
texture = ExtResource("2_m3xs3")
script = ExtResource("3_rmjhq")

[node name="Stats" type="Node2D" parent="."]
script = ExtResource("4_u03hx")
MA = 7
STR = 3
AG = 3
PA = 4
AV = 8

[node name="Skills" type="Node2D" parent="."]
script = ExtResource("5_3dlth")

[node name="SelectComponent" parent="." node_paths=PackedStringArray("node_emit_on_select") instance=ExtResource("5_6d4g4")]
scale = Vector2(1.4, 1.44)
node_emit_on_select = NodePath("..")

[node name="BlockDiceViewer" type="Node2D" parent="."]
z_index = 1
position = Vector2(-1, 0)
script = ExtResource("7_tnamy")

[node name="PlayerUiComponent" parent="." instance=ExtResource("6_qnm0n")]
visible = false
visibility_layer = 2
z_index = 2
position = Vector2(21, -28)

[node name="ColliderComponent" parent="." instance=ExtResource("10_ao2xe")]
scale = Vector2(1.4, 1.4)

[node name="DragAndDropComponent" parent="." instance=ExtResource("11_k3y3d")]
